--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,42 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+#container {
+    display: flex;
+    height: 100vh;
+}
+.main-view {
+    position: relative;
+    display:flex;
+    justify-content: center;
+    max-height: 100%;
+    width: auto;
+}
+#stovetop-image {
+    max-height: 100%;
+    width: auto;
+}
+.logo-text {
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    padding: 20px 0;
+    height: auto;
+    text-align: center;
+    font-size: x-large;
+    color: white;
+    background-color: rgba(122, 98, 74, 0.5);
+}
+#stovetop-credit {
+    position: absolute;
+    bottom: 10px;
+    color: lightgray;
+    font-size: small;
+    opacity: 0.75;
+    background-color: rgba(32, 30, 30, 0.5);
+    
+}
+#stovetop-credit a{
+    color: lightgray;
+}
