--- a/styles.css
+++ b/styles.css
@@ -68,17 +68,17 @@ table {
     top: 20%;
     width: 100%;
     height: auto;
-    background-color: rgba(122, 98, 74, 0.5);
+    background-color: rgba(122, 98, 74, 0.1);
     display: flex;
     padding: 20px 0;
     justify-content: center;
 }
 
 #chef-hat-image {
-    max-height: 100px;
+    max-height: 150px;
     filter: invert(100%);
     border: 0;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .logo-text {
@@ -90,7 +90,7 @@ table {
 }
 #stovetop-credit {
     position: absolute;
-    bottom: 10px;
+    bottom: 1%;
     color: lightgray;
     font-size: x-small;
     opacity: 0.75;
@@ -102,6 +102,16 @@ table {
     color: lightgray;
 }
 
-/* * { 
+#signup-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.page-background {
+    background-color: lightgray;
+    flex-grow: 1;
+}
+
+* { 
     border: 1px solid red; 
-} */
+}
