--- a/styles.css
+++ b/styles.css
@@ -52,22 +52,22 @@ table {
     display: flex;
     height: 100vh;
 }
-.main-view {
+.sidebar-view {
     position: relative;
-    display:flex;
+    left: 0;
+    display: flex;
     justify-content: center;
-    max-height: 100%;
-    width: auto;
+    background-image: url("./images/laura-adai-EVpuANEtz4k-unsplash.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 50%;
+    max-width: 350px;
 }
-#stovetop-image {
-    max-height: 100%;
-    width: auto;
-}
+
 .logo-space {
     position: absolute;
     top: 20%;
     width: 100%;
-    height: auto;
     background-color: rgba(122, 98, 74, 0.1);
     display: flex;
     padding: 20px 0;
@@ -75,7 +75,8 @@ table {
 }
 
 #chef-hat-image {
-    max-height: 150px;
+    max-height: 100px;
+    width: auto;
     filter: invert(100%);
     border: 0;
     margin-right: 15px;
@@ -88,6 +89,7 @@ table {
     color: white;
     margin: auto 0;
 }
+
 #stovetop-credit {
     position: absolute;
     bottom: 1%;
@@ -105,13 +107,66 @@ table {
 #signup-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
 }
+#signup-container > div {
+    padding: 0 10%;
+}
+
 .page-background {
     background-color: lightgray;
     flex-grow: 1;
 }
 
-* { 
-    border: 1px solid red; 
+#signup-inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 5px;
+}
+#signup-form {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-gap: 20px;
+    max-width: 500px;
+    padding: 10px 0;
+}
+#create-account-button {
+    margin: 10px 0;
+    display: block;
+    background-color: lightsalmon;
+    color: #6e534b;
+    padding: 5px;
+    border-radius: 10px;
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+}
+#account-creation {
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h3 {
+    font-weight: bold;
+    font-size: larger;
+    padding: 20px 0;
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
+}
+input {
+    display: inline-block;
+    border-color: #E5E7EB;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: medium;
+}
+input:focus {
+    border-color: blue;
+    box-shadow: 2px 2px 5px #6e534b;
+}
+label {
+    display: block;
+    font-size: medium
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
 }
